--- a/home.html
+++ b/home.html
@@ -16,9 +16,9 @@
 
 	<nav id = "navbar">
 		<ul>
-			<li><a href="file:///C:/Users/elias/Documents/P%C3%A1ginas%20web%20hechas%20por%20mi/CSS%20JS%20HTML%20CRUDO/001/home.html">Home</a></li>
-			<li><a href="file:///C:/Users/elias/Documents/P%C3%A1ginas%20web%20hechas%20por%20mi/CSS%20JS%20HTML%20CRUDO/001/peopleSection.html">Organization</a></li>
-			<li><a href="file:///C:/Users/elias/Documents/P%C3%A1ginas%20web%20hechas%20por%20mi/CSS%20JS%20HTML%20CRUDO/001/About.html">About</a></li>
+			<li><a href="https://licenselesshunter.github.io">Home</a></li>
+			<li><a href="https://licenselesshunter.github.io/peopleSection">Organization</a></li>
+			<li><a href="https://licenselesshunter.github.io/About">About</a></li>
 		</ul>
 
 	</nav>
