--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 			<div class="mySlides">
 				
-				<img src="images/company.jpg">
+				<img src="images/Company.jpg">
 				<div class="text">Our mission is to bring the service that the customer deserves at the right time.</div>
 			</div>
 
@@ -72,7 +72,7 @@
 			</div>  
 
 			<aside class="ImageDescription"> <!-- Parte del sidebar donde estara la imagen-->
-				<img src="images/company.jpg">
+				<img src="images/Company.jpg">
 			</aside>
 
 		</div>  
